third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/local-date/trailing-t.stderr
TOML parse error at line 2, column 15
  |
2 | d = 2006-01-30T
  |               ^
expected newline, `#`
